// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`remediation-instructions-filters-item Renders \`remediation-instructions-filters-item\` with custom props 1`] = `
<div
  class="instruction-filter"
>
  <span
    class="white--text v-chip v-chip--clickable v-chip--label v-chip--removable theme--light v-size--default grey"
  >
    <span
      class="v-chip__content"
    >
      <span
        class="instruction-filter__text"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate material-icons theme--light white--text"
          style="font-size: 16px;"
        >
          assignment
        </i>
        <i
          aria-hidden="true"
          class="v-icon notranslate pl-1 material-icons theme--light white--text"
          style="font-size: 16px;"
        >
          lock
        </i>
        <strong
          class="pl-2 text-uppercase"
        >
          WITH:
        </strong>
        <span
          class="pl-1"
        >
        Manual
        </span>
        <!---->
      </span>
      <button
        aria-label="Close"
        class="v-icon notranslate v-chip__close v-icon--link v-icon--right material-icons theme--light"
        style="font-size: 18px;"
        type="button"
      >
        check_box_outline_blank
      </button>
    </span>
  </span>
</div>
`;

exports[`remediation-instructions-filters-item Renders \`remediation-instructions-filters-item\` with default props 1`] = `
<div
  class="instruction-filter"
>
  <span
    class="white--text v-chip v-chip--label theme--light v-size--default primary"
  >
    <span
      class="v-chip__content"
    >
      <span
        class="instruction-filter__text"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate material-icons theme--light white--text"
          style="font-size: 16px;"
        >
          assignment
        </i>
        <!---->
        <strong
          class="pl-2 text-uppercase"
        >
          WITHOUT:
        </strong>
        <span
          class="pl-1"
        >
        </span>
        <!---->
      </span>
    </span>
  </span>
</div>
`;

exports[`remediation-instructions-filters-item Renders \`remediation-instructions-filters-item\` with filter in progress 1`] = `
<div
  class="instruction-filter"
>
  <span
    class="white--text v-chip v-chip--clickable v-chip--label v-chip--removable theme--light v-size--default grey"
  >
    <span
      class="v-chip__content"
    >
      <span
        class="instruction-filter__text"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate material-icons theme--light white--text"
          style="font-size: 16px;"
        >
          assignment
        </i>
        <i
          aria-hidden="true"
          class="v-icon notranslate pl-1 material-icons theme--light white--text"
          style="font-size: 16px;"
        >
          lock
        </i>
        <strong
          class="pl-2 text-uppercase"
        >
          Show WITH:
        </strong>
        <span
          class="pl-1"
        >
        Manual
        </span>
        <strong
          class="pl-1 text-uppercase"
        >
        In progress
        </strong>
      </span>
      <button
        aria-label="Close"
        class="v-icon notranslate v-chip__close v-icon--link v-icon--right material-icons theme--light"
        style="font-size: 18px;"
        type="button"
      >
        check_box_outline_blank
      </button>
    </span>
  </span>
</div>
`;

exports[`remediation-instructions-filters-item Renders \`remediation-instructions-filters-item\` with filter instruction in progress 1`] = `
<div
  class="instruction-filter"
>
  <span
    class="white--text v-chip v-chip--clickable v-chip--label v-chip--removable theme--light v-size--default grey"
  >
    <span
      class="v-chip__content"
    >
      <span
        class="instruction-filter__text"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate material-icons theme--light white--text"
          style="font-size: 16px;"
        >
          assignment
        </i>
        <i
          aria-hidden="true"
          class="v-icon notranslate pl-1 material-icons theme--light white--text"
          style="font-size: 16px;"
        >
          lock
        </i>
        <strong
          class="pl-2 text-uppercase"
        >
          Show WITH:
        </strong>
        <span
          class="pl-1"
        >
        Manual
        </span>
        <strong
          class="pl-1 text-uppercase"
        >
        In progress
        </strong>
      </span>
      <button
        aria-label="Close"
        class="v-icon notranslate v-chip__close v-icon--link v-icon--right material-icons theme--light"
        style="font-size: 18px;"
        type="button"
      >
        check_box_outline_blank
      </button>
    </span>
  </span>
</div>
`;
